--- a/html-pj/project-3/css/nintendo.css
+++ b/html-pj/project-3/css/nintendo.css
@@ -92,6 +92,7 @@
 
 
 
+
 .sec-2-1 {
     display: block;
     position: relative;
@@ -147,13 +148,13 @@
     display: block;
     position: relative;
     width: 100%;
-    min-height: 4516px;
-    height: 100vh;
+    min-height: 180vw;
+    height: auto;
     background-color: #000;
     background-size: cover;
     background-position: center;
     margin: 0 auto;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .sec-2 .sec-2-2 .section-controll {
@@ -166,16 +167,16 @@
 .sec-2 .sec-2-2 .section-controll li {
     padding: 15px 75px;
     background-color: transparent;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s ease-in-out;
 }
 
 .sec-2 .sec-2-2 .sticky {
     position: sticky;
     padding: 160px 0;
     top: 0;
-    display: block;
+    display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow: visible;
     z-index: 10;
 }
 
@@ -197,11 +198,17 @@
     width: 100%;
     transform: translateX(-50%);
     z-index: 1;
+    /* overflow: hidden; */
+    display: flex;
+    position: relative;
 }
 
 
 .sec-2 .sec-2-2 .sec-2-2-txt {
-    display: flex;
+    width: 150%;
+    height: 200vw;
+    position: absolute;
+    overflow: hidden;
 }
 
 .sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-box {
@@ -213,7 +220,7 @@
     justify-content: center;
     opacity: 0;
     transition: opacity 0.5s ease-in-out, visibility 0.5s;
-    ;
+
 }
 
 .sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-1 {
@@ -222,8 +229,9 @@
     top: 5vw;
     left: 62vw;
     margin: 80px 0 0 46px;
-
 }
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-1 ul .front-hidden {}
 
 .sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-1 .front {
     position: absolute;
@@ -231,9 +239,7 @@
     right: -30.344vw;
     transform: rotate(-36deg);
     z-index: 10;
-    width: 1348px;
-    height: 569px;
-
+    max-width: 100%;
 }
 
 .sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-1 .text {
@@ -250,16 +256,28 @@
 
 
 .sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 {
-    position: relative;
+    /* position: relative;  */
     width: 1620px;
     height: 854px;
-    top: 70vw;
-    left: 50vw;
+    top: 45vw;
+    left: 70vw;
     margin: 0px auto;
 }
 
 .sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .front {
     position: relative;
+}
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .front .front-one {
+    position: absolute;
+    z-index: 10;
+}
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .front .front-two {
+    position: absolute;
+    right: -14vw;
+    top: 1.682vw;
+    z-index: 1;
 }
 
 .sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .front .front-one .front-2-1-fr-1 {
@@ -268,99 +286,306 @@
     height: 855px;
     top: 2vw;
     left: -265px;
+
+
 }
-.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .front .front-one .front-2-2-fr-1{
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .front .front-one .front-2-2-fr-1 {
     position: absolute;
     width: 1100px;
     height: 1100px;
     top: -7vw;
-    left: -12vw;
+    left: -12.86vw;
 }
-
-
-
-
 
 .sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .front .front-two .front-2-1-fr-2 {
     position: absolute;
     width: 643px;
     height: 604px;
-    top: 6.9vw;
-    right: -55vw;
+    top: 4.9vw;
+    right: -42vw;
 }
+
 .sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .front .front-two .front-2-2-fr-2 {
     position: absolute;
     width: 730px;
     height: 520px;
-    top: 6vw;
-    left: 29vw;
+    top: 4.9vw;
+    right: -42vw;
 }
 
-.sec-2 .sec-2-2 .scllor  .sec-2-2-txt .sec-2-2-2 .text {
+
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .text .text-st {
     position: absolute;
     text-align: left;
     top: 6.22vw;
     left: 31.8vw;
+    z-index: 2;
 }
-.sec-2 .sec-2-2 .scllor  .sec-2-2-txt .sec-2-2-2 .text .text-ul{
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .text .text-ul {
     gap: 90px;
     display: flex;
     flex-direction: column
 }
-.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .text .sub-1{
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .text .sub-1 {
     position: relative;
     left: 4vw;
 }
-.switch-btn {
-    width: 20px;
-    height: 20px;
-    background-color: red;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
+
+.button-container {
+    position: absolute;
+    display: flex;
+    gap: 26px;
+    bottom: -0.84vw;
+    left: 7.88vw;
 }
 
-/* 이미지와 텍스트 숨기기 */
+.switch-btn {
+    width: 104px;
+    height: 4px;
+    border: none;
+    background-color: gray;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.switch-btn.active {
+    background-color: red !important;
+}
+
+.front-2-1-fr-1,
+.front-2-2-fr-1,
+.front-2-1-fr-2,
+.front-2-2-fr-2,
+.text-one,
+.text-two {
+    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+    opacity: 1;
+    visibility: visible;
+}
+
 .hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    /* 클릭 방지 */
+}
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-3 {
+    /* position: absolute; */
+    width: 1590px;
+    height: 526px;
+    top: 93vw;
+    left: 62vw;
+    margin: 80px 0 0 46px;
+}
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-3 ul li img {
+    position: absolute;
+}
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-3 .fr-1 {
+    z-index: 10;
+    width: 458px;
+    height: 316px;
+    bottom: -11vw;
+    left: 34.4vw;
+}
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-3 .fr-2 {
+    z-index: 9;
+    width: 799px;
+    height: 376px;
+    bottom: -9vw;
+    left: 36.2vw;
+}
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-3 .fr-3 {
+    z-index: 8;
+    width: 625px;
+    height: 222px;
+    bottom: 6.8vw;
+    left: 41.4vw;
+    border: 2px solid white;
+    /* 기본적인 흰색 보더 */
+    box-shadow: inset 0 0 0 2px white;
+    /* 안쪽 보더 효과 */
+    display: block;
+}
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-3 .bg-1 {
+    width: 1065px;
+    height: 500px;
+    top: 10.24vw;
+    left: 2vw;
+}
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-3 .bg-font {
+    top: 0;
+    left: 0;
+}
+
+.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-3 .text {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 95px;
+    top: 6vw;
+    left: -12vw;
+    z-index: 10;
+}
+
+
+.sec-3 {
+    position: relative;
+    overflow: hidden;
+    background-color: #F5F5F7;
+    ;
+}
+
+.sec-3 .sec-3-1 span {
+    display: flex;
+    width: 200px;
+    margin: 0 auto;
+    border: red solid 2px;
+}
+
+.sec-3 .sec-3-1 .item-list-container {
+    display: flex;
+    margin-top: 76px;
+    overflow-x: auto;
+
+    mask-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0) 5%,   /* 왼쪽 투명 영역 좁힘 */
+        rgba(0, 0, 0, 1) 15%,  /* 불투명 시작 (더 일찍 가려짐) */
+        rgba(0, 0, 0, 1) 80%,  /* 불투명 끝 (더 늦게 가려짐) */
+        rgba(0, 0, 0, 0) 100%   /* 오른쪽 투명 영역 좁힘 */
+    );
+    -webkit-mask-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0) 5%,
+        rgba(0, 0, 0, 1) 15%,
+        rgba(0, 0, 0, 1) 80%,
+        rgba(0, 0, 0, 0) 100%
+    );
+    
+
+}
+
+.item-list-container::-webkit-scrollbar {
     display: none;
 }
 
+.sec-3 .sec-3-1 .item-list-container .item-list {
+    display: flex;
+    gap: 20px;
+    margin: 0 0 100px 142px;
+}
 
+.sec-3 .sec-3-1 .item-list-container .item-box {
+    text-align: center;
+    width: 400px;
+    height: 468px;
+    border-radius: 16px;
+    background: #E9E8ED;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 60px 33px;
+    transition: transform 0.5s ease-in-out;
+}
 
-/* 공통 스타일 */
-.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .text .sub-1::before,
-.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .text .sub-1::after,
-.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .text span::before,
-.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .text span::after {
-    content: "";
+.scroll-btn {
     position: absolute;
-    background-color: white;
-}
-/* 왼쪽 위 L자 */
-.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .text .sub-1::before {
-    top: -50px;
-    left:-58px;
-    width: 150px;  /* 가로선 */
-    height: 2px;
-}
-
-.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .text .sub-1::after {
-    top: -50px;
-    left: -60px;
-    width: 2px;  /* 세로선 */
-    height: 150px;
-}
-/* 오른쪽 아래 L자 */
-.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .text span::before {
-    bottom: 0;
-    right: -4.531vw;
-    width: 64px;  /* 가로선 */
-    height: 2px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 10;
+    border-radius: 50%;
+    opacity: 0;
+    /* 투명하게 처리 */
+    transition: opacity 0.3s ease-in-out;
 }
 
-.sec-2 .sec-2-2 .scllor .sec-2-2-txt .sec-2-2-2 .text span::after {
-    bottom: 0;
-    right: -4.531vw;
-    width: 2px;  /* 세로선 */
-    height: 64px;
+.sec-3-1:hover .scroll-btn {
+    opacity: 1;
+}
+
+
+.scroll-btn.left {
+    left: 10px;
+}
+
+.scroll-btn.right {
+    right: 10px;
+}
+
+
+.sec-3 .sec-3-1 .item-list-container .item-box .text {
+    width: 334px;
+    text-align: left;
+    border-bottom: red solid 2px;
+}
+
+.sec-3 .sec-3-1 .item-list-container .item-box img {
+    margin-top: 75px;
+}
+
+.sec-4 {}
+
+.sec-4 .text {
+    display: flex;
+    justify-content: space-between;
+    margin: 70px 282px;
+}
+
+.sec-4 .text .text-list {
+    text-align: center;
+}
+
+.sec-4 .text .text-list span {
+    display: flex;
+    width: 26px;
+    margin: 0 auto;
+    border: red solid 2px;
+}
+
+.sec-4 .text .text-list .title {
+    margin-top: 12px;
+}
+
+.sec-4 .text .text-list .sub-menu {
+    display: flex;
+    margin-top: 32px;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.sec-5 {
+    height: 344px;
+    background: #D9D9D9;
+}
+
+.sec-5 .last-list {
+    padding-top: 108px;
+    display: flex;
+    justify-content: center;
+    gap: 110px;
+}
+.sec-5 .last-list .suport .sub{
+    margin-top: 16px;
+}
+.sec-5 .last-list .rule ul {
+    display: flex;
+    gap: 32px;
+}
+.sec-5 .last-list .rule div{
+    margin-top: 20px;
 }
