--- a/css/pc2.css
+++ b/css/pc2.css
@@ -355,7 +355,7 @@
   flex-direction: row;
   gap: 0.521vw;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-shrink: 0;
   width: 11.146vw;
   height: 11.146vw;
